syntax = "proto3";

package fspb;

option go_package = "cloudborad/ringio/fspb";

import "google/protobuf/timestamp.proto";


message HashChunkInfo {
    string chunk_name = 1;
    bytes chunk_hash = 2;
    string base_path = 3;
    int64 size = 4;
    google.protobuf.Timestamp mod_time = 6;
}
