syntax = "proto3";


package fspb;

option go_package = "cloudborad/ringio/fspb";

message NodeInfo {
    int64 node_id = 1;
    string name = 2;
    string addr = 3;
}


message ListNodeRequest {
    int64 dest_node_id = 1;
}


message NodeList {
    repeated NodeInfo nodes = 1;
}

service NodeService {
    rpc ListNode(ListNodeRequest) returns (NodeList) {}

}
